# Segs

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  BitStream_8cpp.html  BitStream_8h.html  BitStream_8h_source.html  Buffer_8cpp.html  Buffer_8h.html  Buffer_8h_source.html  CMakeLists.txt  CNAME  ConfigExtension_8cpp.html  ConfigExtension_8h.html  ConfigExtension_8h_source.html  Dockerfile  Dockerfile.h  Doxyfile  EventProcessor_8cpp.html  EventProcessor_8h.html  EventProcessor_8h_source.html  LICENSE  LICENSE.md  LinkLevelEvent_8h.html  LinkLevelEvent_8h_source.html  README.md  SECURITY.md  SEGSEvent_8h.html  SEGSEvent_8h_source.html  SEGSTimer_8cpp.html  SEGSTimer_8h.html  SEGSTimer_8h_source.html  activate.env.template  annotated.html  appveyor.yml  classBitStream-members.html  classBitStream.html  classConnectEvent-members.html  classConnectEvent.html  (+33 more)
Clients/Client_I0/: CMakeLists.txt  dll_core.cpp
Clients/Client_I0_Null/: CMakeLists.txt
Common/AuthProtocol/: AuthLink.cpp  AuthPacketCodec.h  CMakeLists.txt
Common/CRUDP_Protocol/: CMakeLists.txt  CRUDP_Packet.cpp  CRUDP_Packet.h  CRUDP_Protocol.cpp  CRUD_Events.cpp  CRUD_Events.h  CRUD_Link.cpp  ILink.h
Common/GameData/: CMakeLists.txt  Character.cpp  Character.h  CharacterAttributes.cpp  CharacterAttributes.h  CharacterClass.cpp  CharacterClass.h  CharacterData.cpp  Clue.cpp  Clue.h  CoXHash.h  CommonNetStructures.h  Contact.cpp  Contact.h  Costume.cpp  Costume.h  DataStorage.cpp  DataStorage.h  Entity.h  EntityHelpers.cpp  Friend.cpp  GameDataStore.cpp  GameDataStore.h  LFG.cpp  LFG.h  Movement.cpp  NpcStore.cpp  NpcStore.h  PlayerProgress.cpp  PlayerProgress.h  PlayerStatistics.cpp  PlayerStatistics.h  Powers.cpp  Powers.h  Sidekick.cpp  StateInterpolator.cpp  StateStorage.cpp  StateStorage.h  Store.cpp  Store.h  (+65 more)
Common/Runtime/: Animation.cpp  Animation.h  AnimationEngine.h  CMakeLists.txt  Handle.h  HandleBasedStorage.h  Model.cpp  Model.h  Prefab.cpp  Prefab.h  RuntimeData.cpp  RuntimeData.h  SceneGraph.cpp  SceneGraph.h  Sequencer.cpp  Sequencer.h  Texture.cpp  Texture.h
Common/Servers/: CMakeLists.txt  ClientManager.h  EventHelpers.h  HandlerLocator.cpp  InternalEvents.h  MessageBus.cpp  MessageBus.h  MessageBusEndpoint.h  ServerEndpoint.cpp  ServerEndpoint.h
Components/: BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CircularBlockBuffer.h  Colors.h  CompiletimeHash.h  ConfigExtension.cpp  ConfigExtension.h  EmergencyHelpers.cpp  EmergencyHelpers.h  EventProcessor.cpp  EventProcessor.h  FixedPointValue.cpp  FixedPointValue.h  LinkLevelEvent.h  Logging.cpp  Logging.h  PasswordHasher.cpp  PasswordHasher.h  SEGSEvent.cpp  SEGSEvent.h  SEGSEventFactory.cpp  SEGSEventFactory.h  SEGSTimer.cpp  SEGSTimer.h  Settings.cpp  Settings.h  TimeEvent.h  TimeHelpers.cpp  TimeHelpers.h  serialization_common.cpp  serialization_common.h  serialization_types.cpp  serialization_types.h
Components/Bitstream/: BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  CMakeLists.txt
Components/Client/: CMakeLists.txt
Components/Common/: CMakeLists.txt
Components/ConfigExtensions/: CMakeLists.txt  ConfigExtension.cpp  ConfigExtension.h
Components/EventSystem/: CMakeLists.txt  EventProcessor.cpp  EventProcessor.h  SEGSTimer.cpp  SEGSTimer.h
Components/GrowingBuffer/: Buffer.cpp  CMakeLists.txt
Components/Scripting/: CMakeLists.txt  MRubyEngine.cpp  MRubyEngine.h  WrapperGenerator.h
Components/Server/: CMakeLists.txt
Components/UnitTests/: CMakeLists.txt  CommonEventRegistry.cpp
Editor/: AuthClient.cpp  AuthClient.h  CMakeLists.txt  main.cpp
Projects/: CMakeLists.txt
Projects/ChampionsOnline/: CMakeLists.txt
Projects/CoX/: CMakeLists.txt
Projects/Example01/: CMakeLists.txt
Servers/: CMakeLists.txt
Servers/AuthDatabase/: AuthDBSyncContext.cpp  AuthDBSyncHandler.h  CMakeLists.txt
Servers/AuthServer/: AdminRPC.cpp  AdminRPC.h  AuthHandler.cpp  AuthHandler.h  AuthServer.cpp  AuthServer.h  CMakeLists.txt  main.cpp
Servers/GameDatabase/: CMakeLists.txt  GameDBSyncContext.cpp  GameDBSyncHandler.h  GameDBSyncService.cpp  GameDBSyncService.h
Servers/GameServer/: CMakeLists.txt  GameEventFactory.cpp  GameHandler.cpp  GameHandler.h  GameServer.cpp
Servers/MapServer/: CMakeLists.txt  DataHelpers.cpp  DataHelpers.h  EntityStorage.cpp  EntityUpdateCodec.cpp  MapClientSession.cpp  MapClientSession.h  MapEventFactory.cpp  MapInstance.cpp  MapInstance.h  MapLink.cpp  MapLink.h  MapManager.cpp  MapSceneGraph.cpp  MapSceneGraph.h  MapServer.cpp  MapTemplate.h  MessageHelpers.cpp  NetCommandManager.cpp  NetCommandManager.h  NetFxHelpers.cpp
Utilities/: CMakeCreator.rb  CMakeLists.txt  CreateComponent.rb  CreateProject.rb  SegsUtil.rb
Utilities/AuthExerciser/: DummyClass.cpp  DummyClass.h  main.cpp
Utilities/BinConverter/: CMakeLists.txt  binConverter.cpp
Utilities/BinParserGenerator/: .project
Utilities/CharacterViewer/: CMakeLists.txt
Utilities/Distribution/: Authors.txt  Install.txt  License.txt  segs.nsi
Utilities/EditorComponents/: Adaptic.qss  AssetSelector.cpp  AssetSelector.h  AssetSelector.ui  CMakeLists.txt  EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SegsOriginEditor.cpp  SegsOriginEditor.h  SegsOriginEditor.ui  main.cpp  soe.qrc
Utilities/EditorComponets/: CMakeLists.txt  SegsOriginEditor.cpp  SegsOriginEditor.h  SegsOriginEditor.ui  main.cpp
Utilities/MapViewer/: CMakeLists.txt
Utilities/RPCTestClient/: CMakeLists.txt
Utilities/RegistryWriter/: RegistryWriter.sln
Utilities/SEGSAdmin/: AboutDialog.ui  CMakeLists.txt  GenerateConfigFileDialog.h  GetIPDialog.h  Helpers.cpp  Helpers.h  SEGSAdminTool.cpp  SEGSAdminTool.h  SEGSAdminTool.ui  SetUpData.cpp  SetUpData.h  SetUpData.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SyntaxHighlighter.h  ThemeManager.cpp  ThemeManager.h  Worker.cpp  Worker.h  main.cpp  resources.qrc
Utilities/ServerMonitor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  (+2 more)
client/: CMakeLists.txt
common/: CMakeLists.txt
packaging/: CMakeLists.txt
server/: CMakeLists.txt
(+14432 files in other folders)
