add_subdirectory(slav)
add_subdirectory(event_gen)

IF(BUILD_COX_MAP_VIEWER)
  add_subdirectory(MapViewer)
  add_subdirectory(CharacterViewer)
ENDIF(BUILD_COX_MAP_VIEWER)
add_subdirectory(piggtool)
add_subdirectory(BinConverter)
add_subdirectory(TextureConverter)
add_subdirectory(dbtool)
add_subdirectory(AuthExerciser)
add_subdirectory(SEGSAdmin)
add_subdirectory(EditorComponets/)
IF(BUILD_RPC_TEST_CLIENT)
  add_subdirectory(RPCTestClient)
ENDIF(BUILD_RPC_TEST_CLIENT)
